create (empty) React application

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Geographical Web Applications</title>
 </head>
 <body>
-<div>I'm a map!</div>
+<div id="root"></div>
 </body>
+<script src="src/main.tsx" type="module"></script>
 </html>
