convert main.jsx to TypeScript

--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
   <body>
     <div id="root"></div>
   </body>
-  <script src="src/main.jsx" type="module"></script>
+  <script src="src/main.tsx" type="module"></script>
 </html>
